[package]
edition = "2021"
name = "ve_direct"
version = "0.1.7"
authors = ["Bartosz Nowak"]
description = "Victron Energy Direct protocol parser and units converter"
license = "MIT"
repository = "https://github.com/Okm165/ve_direct"
documentation = "https://docs.rs/ve_direct/"
keywords = ["parser", "converter", "translator"]
categories = ["parsing", "value-formatting", "text-processing", "development-tools"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.21"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
strum = "0.24.1"
strum_macros = "0.24.3"

# example.rs
# tokio-serial = {version = "5.4.3"}
# tokio = {version="1.20.1", features = ["full"]}
